--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -1,15 +1,16 @@
 #friends-display-link {
     text-align: center;
     display: block;
-    background-color: #fafafa;
+    background-color: #202020;
+    color: var(--dark-text);
     padding: 15px 0px;
     font-size: 16px;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
     margin-top: -15px;
 }
 
 #friends-display-link i {
-    color: rgba(0, 0, 0, 0.3);
+    color: rgba(255, 255, 255, 0.5);
 }
 
 .friends-screen {
@@ -27,7 +28,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: rgba(0, 0, 0, 0.5);
+    color: rgba(255, 255, 255, 0.8);
 }
 
 @keyframes hideSplashScreen {
@@ -41,7 +42,7 @@
 }
 
 #splash-screen {
-    background-color: var(--yellow);
+    background-color: var(--dark-background);
     position: absolute;
     width: 100vw;
     height: 100vh;
