--- a/css/components/alt-screen-header.css
+++ b/css/components/alt-screen-header.css
@@ -9,10 +9,16 @@
 
 .alt-header__column {
     width: 33%;
+    font-size: 24px;
+    padding: 10px;
+}
+
+.alt-header__column i {
+    font-size: 20px;
+    color: var(--dark-text);
 }
 
 .alt-header__title {
-    font-size: 28px;
     font-weight: 600;
 }
 
