--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -16,6 +16,10 @@
     margin-left: 25px;
 }
 
+.screen-header__icons i {
+    color: var(--dark-text);
+}
+
 
 @keyframes rotateCog {
     from {
@@ -26,6 +30,28 @@
     }
 }
 
+@keyframes shakeMusic {
+    0% {
+        transform: rotate(0deg);
+    }
+    25% {
+        transform: rotate(10deg);
+    }
+    50% {
+        transform: rotate(-10deg);
+    }
+    75% {
+        transform: rotate(10deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+}
+
 .screen-header__icons .fa-cog:hover {
     animation: rotateCog 3s linear infinite;
+}
+
+.screen-header__icons .fa-music:hover {
+    animation: shakeMusic 0.5s linear infinite;
 }
