--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -17,6 +17,7 @@
 }
 
 .user-component__title {
+    color: var(--dark-text);
     font-weight: 600;
     font-size: 22px;
 }
@@ -24,7 +25,7 @@
 .user-component__subtitle {
     margin-top: 8px;
     font-size: 17px;
-    color: rgba(0, 0, 0, 0.5);
+    color: rgba(255, 255, 255, 0.8);
 }
 
 .user-component__avatar--xl {
@@ -35,7 +36,7 @@
 .user-component__avatar--sm {
     width: 60px;
     height: 60px;
-    border-radius: 25px;   
+    border-radius: 25px;
 }
 
 .user-component__title--not-bold {
@@ -43,7 +44,7 @@
 }
 
 .user-component__column:last-child {
-    color: rgba(0, 0, 0, 0.5);
+    color: rgba(255, 255, 255, 0.5);
     display: flex;
     flex-direction: column;
     align-items: flex-end;
