--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,5 +1,5 @@
 #chat-screen {
-    background-color: #abc1d1;
+    background-color: darkslategrey;
     height: 500vh;
 }
 
@@ -8,12 +8,12 @@
     width: 100%;
     box-sizing: border-box;
     top: -10px;
-    background-color: #abc1d1;
+    background-color: darkslategrey;
+    color: var(--dark-text);
     z-index: 1;
 }
 
 #chat-screen .status-bar {
-    background-color: #abc1d1;
     z-index: 2;
 }
 
@@ -39,7 +39,7 @@
 
 .chat__timestamp {
     color: white;
-    background-color: #92a4b2;
+    background-color: rgba(0, 0, 0, 0.2);
     padding: 15px;
     font-size: 14px;
     border-radius: 25px;
@@ -73,6 +73,7 @@
 
 .message__bubble {
     background-color: white;
+    color: #202020;
     padding: 13px;
     border-radius: 15px;
     border-top-left-radius: 0;
@@ -109,10 +110,10 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    background-color: white;
+    background-color: #202020;
     display: flex;
     justify-content: space-between;
-    padding: 5px 25px;
+    padding: 7px 25px;
     align-items: center;
     box-sizing: border-box;
 }
@@ -129,6 +130,8 @@
 .reply input {
     padding: 12px;
     width: 105%;
+    background-color: var(--dark-background);
+    color: white;
     border: var(--main-border);
     border-radius: 20px;
     box-sizing: border-box;
