--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 @import "reset.css";
 @import "variables.css";
 
@@ -21,8 +20,9 @@
 @import "screens/chat.css";
 
 body {
-    color: #2e363e;
-    font-family: "Open Sans", serif;
+    background-color: var(--dark-background);
+    color: var(--dark-text);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .main-screen {
