--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
 @import "reset.css";
 @import "variables.css";
 
-
 /* Components */
 @import "components/status-bar.css";
 @import "components/badge.css";
@@ -11,7 +10,6 @@
 @import "components/icon-row.css";
 @import "components/alt-screen-header.css";
 @import "components/no-mobile.css";
-
 
 /* Screens */
 @import "screens/login.css";
@@ -24,7 +22,9 @@
 body {
     background-color: var(--dark-background);
     color: var(--dark-text);
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
 }
 
 .main-screen {
